--- a/config.env
+++ b/config.env
@@ -8,7 +8,7 @@ JWT_SECRET=my-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
 
-EMAIL_USERNAME=a124458539192a
-EMAIL_PASSWORD=1e3caf48074eba
-EMAIL_HOST=smtp.mailtrap.io
-EMAIL_PORT=25
+EMAIL_USERNAME=project.1
+EMAIL_PASSWORD=secret.1
+EMAIL_HOST=localhost
+EMAIL_PORT=1025
