--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.3",
-    "hpp": "^0.2.3",
     "helmet": "^3.22.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0",
     "mongoose": "^5.9.11",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.4.6",
     "path": "^0.12.7",
     "pug": "^2.0.4",
     "xss-clean": "^0.1.1"
