Aidnov API Version 1

--- a/config.env
+++ b/config.env
@@ -8,7 +8,14 @@ JWT_SECRET=my-ultra-secure-and-ultra-long-secret
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
 
-EMAIL_USERNAME=project.1
-EMAIL_PASSWORD=secret.1
-EMAIL_HOST=localhost
-EMAIL_PORT=1025
+EMAIL_USERNAME=1853049e35f9bf
+EMAIL_PASSWORD=8eb24b18103165
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=25
+EMAIL_FROM=admin@aidnov.ci
+
+SENDGRID_USERNAME=apikey
+SENDGRID_PASSWORD=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
+
+SENDGRID_HOST=smtp.sendgrid.net
+SENDGRID_PORT=25
