--- a/package.json
+++ b/package.json
@@ -14,18 +14,25 @@
     "express-rate-limit": "^5.1.3",
     "helmet": "^3.22.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.11",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "path": "^0.12.7",
     "pug": "^2.0.4",
+    "sharp": "^0.25.2",
+    "util": "^0.12.3",
+    "validator": "^13.0.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "repository": {
     "type": "git",
