--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=3000
-DATABASE=mongodb+srv://jonas:<PASSWORD>@cluster0-pwikv.mongodb.net/natours?retryWrites=true
+DATABASE=mongodb+srv://aidnov:AbidjanCocody2020@cluster0-8mifo.mongodb.net/aidnov?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/aidnov
 DATABASE_PASSWORD=On0adDgBCE5ECWh6
 
